--- a/echo-core/src/main/resources/application.properties
+++ b/echo-core/src/main/resources/application.properties
@@ -4,3 +4,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/echo
 spring.datasource.username=echo
 spring.datasource.password=echo
+management.endpoints.web.exposure.include=*
