--- a/echo-web/pom.xml
+++ b/echo-web/pom.xml
@@ -122,6 +122,7 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+    </dependencies>
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
@@ -157,8 +158,9 @@
     </build>
 
     <profiles>
+        <!-- Production mode is activated using -Pproduction
         <profile>
-            <!-- Production mode is activated using -Pproduction -->
+
             <id>production</id>
             <properties>
                 <vaadin.productionMode>true</vaadin.productionMode>
@@ -195,7 +197,8 @@
                 </plugins>
             </build>
         </profile>
-
+-->
+        <!-- Runs the integration tests (*IT) after the server is started
         <profile>
             <id>integration-tests</id>
             <build>
@@ -221,7 +224,7 @@
                         </executions>
                     </plugin>
 
-                    <!-- Runs the integration tests (*IT) after the server is started -->
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
@@ -237,7 +240,7 @@
                             <trimStackTrace>false</trimStackTrace>
                             <enableAssertions>true</enableAssertions>
                             <systemPropertyVariables>
-                                <!-- Pass location of downloaded webdrivers to the tests -->
+
                                 <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
                             </systemPropertyVariables>
                         </configuration>
@@ -262,7 +265,7 @@
                         </configuration>
                         <executions>
                             <execution>
-                                <!-- use phase "none" to skip download step -->
+                                
                                 <phase>${drivers.downloader.phase}</phase>
                                 <goals>
                                     <goal>selenium</goal>
@@ -273,6 +276,6 @@
                 </plugins>
             </build>
         </profile>
-
+        -->
     </profiles>
 </project>
